inc/MetalOS.h

//PixelBlueGreenRedReserved8BitPerColor
struct BGRRPixel
{	
	union
	{
		struct
		{
			uint32_t Blue : 8;
			uint32_t Green : 8;
			uint32_t Red : 8;
			uint32_t Reserved : 8;
		};
		uint32_t AsUint32;
	};
};
typedef struct BGRRPixel Color;
struct Point2D
{
	size_t X;
	size_t Y;
};
struct Rectangle
{
	size_t X;
	size_t Y;
	size_t Width;
	size_t Height;

	bool Contains(const Point2D& p) const
	{
		if (p.X < X || p.X > (X + Width))
			return false;

		if (p.Y < Y || p.Y >(Y + Height))
			return false;

		return true;
	}
};
struct ReadOnlyBuffer
{
	const void* Data;
	size_t Length;
};
struct Buffer
{
	void* Data;
	size_t Length;

	ReadOnlyBuffer GetRef()
	{
		return { Data, Length };
	}
};
struct ProcessInfo
{
	uint32_t Id;
};
enum class DayOfWeek
{
	Sunday,
	Monday,
	Tuesday,
	Wednesday,
	Thursday,
	Friday,
	Saturday
};
struct SystemTime
{
	uint16_t Year;
	uint16_t Month;
	DayOfWeek DayOfTheWeek;
	uint16_t Day;
	uint16_t Hour;
	uint16_t Minute;
	uint16_t Second;
	uint16_t Milliseconds;
};