crates/metalos/src/metalos_bindings.rs

pub type int_least8_t = c_types::c_schar;
pub type int_least16_t = c_types::c_short;
pub type int_least32_t = c_types::c_int;
pub type int_least64_t = c_types::c_longlong;
pub type uint_least8_t = c_types::c_uchar;
pub type uint_least16_t = c_types::c_ushort;
pub type uint_least32_t = c_types::c_uint;
pub type uint_least64_t = c_types::c_ulonglong;
pub type int_fast8_t = c_types::c_schar;
pub type int_fast16_t = c_types::c_int;
pub type int_fast32_t = c_types::c_int;
pub type int_fast64_t = c_types::c_longlong;
pub type uint_fast8_t = c_types::c_uchar;
pub type uint_fast16_t = c_types::c_uint;
pub type uint_fast32_t = c_types::c_uint;
pub type uint_fast64_t = c_types::c_ulonglong;
pub type intmax_t = c_types::c_longlong;
pub type uintmax_t = c_types::c_ulonglong;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct BGRRPixel {
    pub __bindgen_anon_1: BGRRPixel__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union BGRRPixel__bindgen_ty_1 {
    pub __bindgen_anon_1: BGRRPixel__bindgen_ty_1__bindgen_ty_1,
    pub AsUint32: u32,
}
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct BGRRPixel__bindgen_ty_1__bindgen_ty_1 {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize]>,
}
#[test]
fn bindgen_test_layout_BGRRPixel__bindgen_ty_1__bindgen_ty_1() {
    assert_eq!(
        ::core::mem::size_of::<BGRRPixel__bindgen_ty_1__bindgen_ty_1>(),
        4usize,
        concat!(
            "Size of: ",
            stringify!(BGRRPixel__bindgen_ty_1__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::core::mem::align_of::<BGRRPixel__bindgen_ty_1__bindgen_ty_1>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(BGRRPixel__bindgen_ty_1__bindgen_ty_1)
        )
    );
}
impl BGRRPixel__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn Blue(&self) -> u32 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_Blue(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub fn Green(&self) -> u32 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(8usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_Green(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(8usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub fn Red(&self) -> u32 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(16usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_Red(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(16usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub fn Reserved(&self) -> u32 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(24usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_Reserved(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(24usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        Blue: u32,
        Green: u32,
        Red: u32,
        Reserved: u32,
    ) -> __BindgenBitfieldUnit<[u8; 4usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 8u8, {
            let Blue: u32 = unsafe { ::core::mem::transmute(Blue) };
            Blue as u64
        });
        __bindgen_bitfield_unit.set(8usize, 8u8, {
            let Green: u32 = unsafe { ::core::mem::transmute(Green) };
            Green as u64
        });
        __bindgen_bitfield_unit.set(16usize, 8u8, {
            let Red: u32 = unsafe { ::core::mem::transmute(Red) };
            Red as u64
        });
        __bindgen_bitfield_unit.set(24usize, 8u8, {
            let Reserved: u32 = unsafe { ::core::mem::transmute(Reserved) };
            Reserved as u64
        });
        __bindgen_bitfield_unit
    }
}
#[test]
fn bindgen_test_layout_BGRRPixel__bindgen_ty_1() {
    assert_eq!(
        ::core::mem::size_of::<BGRRPixel__bindgen_ty_1>(),
        4usize,
        concat!("Size of: ", stringify!(BGRRPixel__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<BGRRPixel__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(BGRRPixel__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<BGRRPixel__bindgen_ty_1>())).AsUint32 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BGRRPixel__bindgen_ty_1),
            "::",
            stringify!(AsUint32)
        )
    );
}
#[test]
fn bindgen_test_layout_BGRRPixel() {
    assert_eq!(
        ::core::mem::size_of::<BGRRPixel>(),
        4usize,
        concat!("Size of: ", stringify!(BGRRPixel))
    );
    assert_eq!(
        ::core::mem::align_of::<BGRRPixel>(),
        4usize,
        concat!("Alignment of ", stringify!(BGRRPixel))
    );
}
pub type Color = BGRRPixel;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Colors {
    pub _address: u8,
}
extern "C" {
    #[link_name = "\u{1}?White@Colors@@2UBGRRPixel@@B"]
    pub static Colors_White: Color;
}
extern "C" {
    #[link_name = "\u{1}?Blue@Colors@@2UBGRRPixel@@B"]
    pub static Colors_Blue: Color;
}
extern "C" {
    #[link_name = "\u{1}?Green@Colors@@2UBGRRPixel@@B"]
    pub static Colors_Green: Color;
}
extern "C" {
    #[link_name = "\u{1}?Red@Colors@@2UBGRRPixel@@B"]
    pub static Colors_Red: Color;
}
extern "C" {
    #[link_name = "\u{1}?Black@Colors@@2UBGRRPixel@@B"]
    pub static Colors_Black: Color;
}
#[test]
fn bindgen_test_layout_Colors() {
    assert_eq!(
        ::core::mem::size_of::<Colors>(),
        1usize,
        concat!("Size of: ", stringify!(Colors))
    );
    assert_eq!(
        ::core::mem::align_of::<Colors>(),
        1usize,
        concat!("Alignment of ", stringify!(Colors))
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Point2D {
    pub X: size_t,
    pub Y: size_t,
}
#[test]
fn bindgen_test_layout_Point2D() {
    assert_eq!(
        ::core::mem::size_of::<Point2D>(),
        16usize,
        concat!("Size of: ", stringify!(Point2D))
    );
    assert_eq!(
        ::core::mem::align_of::<Point2D>(),
        8usize,
        concat!("Alignment of ", stringify!(Point2D))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Point2D>())).X as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Point2D),
            "::",
            stringify!(X)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Point2D>())).Y as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Point2D),
            "::",
            stringify!(Y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Rectangle {
    pub X: size_t,
    pub Y: size_t,
    pub Width: size_t,
    pub Height: size_t,
}
#[test]
fn bindgen_test_layout_Rectangle() {
    assert_eq!(
        ::core::mem::size_of::<Rectangle>(),
        32usize,
        concat!("Size of: ", stringify!(Rectangle))
    );
    assert_eq!(
        ::core::mem::align_of::<Rectangle>(),
        8usize,
        concat!("Alignment of ", stringify!(Rectangle))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Rectangle>())).X as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Rectangle),
            "::",
            stringify!(X)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Rectangle>())).Y as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Rectangle),
            "::",
            stringify!(Y)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Rectangle>())).Width as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Rectangle),
            "::",
            stringify!(Width)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Rectangle>())).Height as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Rectangle),
            "::",
            stringify!(Height)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ReadOnlyBuffer {
    pub Data: *const c_types::c_void,
    pub Length: size_t,
}
#[test]
fn bindgen_test_layout_ReadOnlyBuffer() {
    assert_eq!(
        ::core::mem::size_of::<ReadOnlyBuffer>(),
        16usize,
        concat!("Size of: ", stringify!(ReadOnlyBuffer))
    );
    assert_eq!(
        ::core::mem::align_of::<ReadOnlyBuffer>(),
        8usize,
        concat!("Alignment of ", stringify!(ReadOnlyBuffer))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ReadOnlyBuffer>())).Data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ReadOnlyBuffer),
            "::",
            stringify!(Data)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ReadOnlyBuffer>())).Length as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ReadOnlyBuffer),
            "::",
            stringify!(Length)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Buffer {
    pub Data: *mut c_types::c_void,
    pub Length: size_t,
}
#[test]
fn bindgen_test_layout_Buffer() {
    assert_eq!(
        ::core::mem::size_of::<Buffer>(),
        16usize,
        concat!("Size of: ", stringify!(Buffer))
    );
    assert_eq!(
        ::core::mem::align_of::<Buffer>(),
        8usize,
        concat!("Alignment of ", stringify!(Buffer))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Buffer>())).Data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Buffer),
            "::",
            stringify!(Data)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Buffer>())).Length as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Buffer),
            "::",
            stringify!(Length)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProcessInfo {
    pub Id: u32,
}
#[test]
fn bindgen_test_layout_ProcessInfo() {
    assert_eq!(
        ::core::mem::size_of::<ProcessInfo>(),
        4usize,
        concat!("Size of: ", stringify!(ProcessInfo))
    );
    assert_eq!(
        ::core::mem::align_of::<ProcessInfo>(),
        4usize,
        concat!("Alignment of ", stringify!(ProcessInfo))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ProcessInfo>())).Id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ProcessInfo),
            "::",
            stringify!(Id)
        )
    );
}
pub const DayOfWeek_Sunday: DayOfWeek = 0;
pub const DayOfWeek_Monday: DayOfWeek = 1;
pub const DayOfWeek_Tuesday: DayOfWeek = 2;
pub const DayOfWeek_Wednesday: DayOfWeek = 3;
pub const DayOfWeek_Thursday: DayOfWeek = 4;
pub const DayOfWeek_Friday: DayOfWeek = 5;
pub const DayOfWeek_Saturday: DayOfWeek = 6;
pub type DayOfWeek = c_types::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SystemTime {
    pub Year: u16,
    pub Month: u16,
    pub DayOfTheWeek: DayOfWeek,
    pub Day: u16,
    pub Hour: u16,
    pub Minute: u16,
    pub Second: u16,
    pub Milliseconds: u16,
}
